# open-meteo

./: Cargo.toml  LICENSE  README.md  user_agents
src/: main.rs
src/web/: mod.rs  proxy.rs  weath.rs
