[package]
name = "weath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake-useragent = "0.1.3"
log = "0.4.20"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17.1"
serde = "1.0.183"
serde_json = "1.0.105"
telers = "1.0.0-alpha.5"
tokio = { version = "1", features = ["full"] }
